# hn-tech-intel

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-07-05-hn-tech-intel.md
migrations/: 001_initial.sql
src/: api.py  config.py  db.py  enricher.py  ingestor.py  models.py  pipeline.py  scraper.py
static/: index.html
tests/: test_enricher.py  test_ingestor.py  test_scraper.py
